ctowasm/test/samples/error/assignment/assign_to_fn.c
int main() {
  main = 1;
}